# brain-teaser

./: LICENSE  README.md  brain-teaser.cabal  stack.yaml
app/: Main.hs
benchmark/: Bench.hs
benchmark/Data/USCS/: TailRecursionBench.hs
src/Data/USCS/: Fix.hs  TailRecursion.hs  TreeUnfold.hs
test/Data/USCS/: FixSpec.hs  TailRecursionSpec.hs
