name:                brain-teaser
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/CHSSPhoenix/brain-teaser#readme
license:             BSD3
license-file:        LICENSE
author:              CHSS
maintainer:          example@example.com
copyright:           2017 CHSS
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.String.Strip,
                       Data.USCS.TailRecursion,
                       Data.USCS.Fix
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable brain-teaser
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , brain-teaser
  default-language:    Haskell2010

test-suite brain-teaser-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , brain-teaser
                     , hspec
                     , QuickCheck
  exposed-modules:     Data.String.StripSpec
                     , Data.USCS.TailRecursionSpec
                     , Data.USCS.FixSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark criterion
    build-depends:    base
                    , brain-teaser
                    , criterion
    default-language: Haskell2010
    hs-source-dirs:   benchmark
    main-is:          Bench.hs
    exposed-modules:  Data.USCS.TailRecursionBench
    type:             exitcode-stdio-1.0

source-repository head
  type:     git
  location: https://github.com/CHSSPhoenix/brain-teaser
